--- a/src/resources/templates/headerWithFilter.html
+++ b/src/resources/templates/headerWithFilter.html
@@ -43,8 +43,8 @@
             </div>
             <div class="jumbotron text-center">
                 <h2>
-                    Codecool Shop
-                    <small class="text-muted">by Malackajava</small>
+                    CrashBooks
+                    <small class="text-muted">by Code Crashers</small>
                 </h2>
             </div>
         </div>
