Design replace, header alter.

--- a/src/resources/public/css/custom.css
+++ b/src/resources/public/css/custom.css
@@ -70,6 +70,10 @@
     right: 16px;
 }
 
+.filter {
+    flex-flow: row;
+}
+
 .jumbotron {
     background-size: contain;
     background: #98d0c5 url("../img/banner.png") no-repeat;
