Todo added to index.html

--- a/src/resources/templates/book/index.html
+++ b/src/resources/templates/book/index.html
@@ -8,10 +8,11 @@
         <div class="container">
 
             <div class="breadcrumb">
+                <!--todo dropdown should stay on the chosen filter, so a user should see whet did he searched for-->
                 Category&nbsp;
                 <strong th:text="${category} != null ? ${category.getName()} : 'ALL'">Category Title</strong>
                 &nbsp;Genre&nbsp;
-                <strong th:text="${genre} != null ? ${genre.getName()} : 'ALL'">Category Title</strong>
+                <strong th:text="${genre} != null ? ${genre.getName()} : 'ALL'">Genre Title</strong>
             </div>
             <div id="products" class="row list-group">
 
