--- a/src/resources/templates/headerWithFilter.html
+++ b/src/resources/templates/headerWithFilter.html
@@ -33,7 +33,7 @@
                     <ul class="nav navbar-nav">
                         <li class="active">
                             <div class="btn-group" role="group" aria-label="Basic example">
-                                <a href="/register">
+                                <a href="/registration">
                                     <button type="register" class="btn btn-warning">Register</button>
                                 </a>
                                 <a href="/login">
