register is possible, saves to database

--- a/src/resources/templates/book/registration.html
+++ b/src/resources/templates/book/registration.html
@@ -8,12 +8,10 @@
             <a href="/">
                 <button type="button" class="btn btn-warning">Back to main page</button>
             </a>
-            <form method = "post" action = "/login">
+            <form method = "post" action = "/registration">
                 <div th:replace="logregpart :: copy"></div>
-                <div class="btn-group formbutton" role="group">
 
-                    <button type="submit" class="btn btn-warning">Login</button>
-                </div>
+                <button type="submit" class="btn btn-warning">Regist me!</button>
             </form>
 
 
