--- a/src/resources/templates/book/index.html
+++ b/src/resources/templates/book/index.html
@@ -22,15 +22,14 @@
                         <div class="caption">
                             <h4 class="group inner list-group-item-heading" th:text="${media.getTitle()}">Product name</h4>
                             <h4 class="group inner list-group-item-heading" th:text="${media.getDescription()}">description</h4>
-                            <!--<p class="group inner list-group-item-text" th:text="${media.description}">Product description... </p>-->
                             <div class="row">
                                 <div class="col-6">
-                                    <!--<p class="lead" th:text="${book.getPrice()}">100 USD</p>-->
+                                    <p class="lead">X left</p>
                                 </div>
                                 <div class="col-6">
-                                    <form action="/add" method="post">
+                                    <form action="/soon" method="post">
                                         <!--<input type="hidden" th:name="mediaId" th:value="${media.id}" />-->
-                                        <input class="btn btn-warning" type="submit" value ="Rent"></input>
+                                        <input class="btn btn-warning" type="submit" value ="Rent"/>
                                     </form>
                                 </div>
                             </div>
