--- a/src/resources/templates/headerWithFilter.html
+++ b/src/resources/templates/headerWithFilter.html
@@ -39,7 +39,7 @@
                                 <button type="button" class="btn btn-outline-warning">Logout</button>
                             </a>
                         </div>
-                        <a href="/profile"><img src="/img/profile.png" alt=""/></a>
+                        <a href="/soon"><img src="/img/profile.png" alt=""/></a> <!--TODO profile page-->
                     </div>
                     <div th:unless="${user}">
                         <div class="btn-group" role="group" aria-label="Basic example">
