--- a/src/resources/templates/book/index.html
+++ b/src/resources/templates/book/index.html
@@ -8,7 +8,7 @@
         <div class="container">
 
             <div class="breadcrumb">
-                <!--todo dropdown should stay on the chosen filter, so a user should see whet did he searched for-->
+                <!--todo dropdown should stay on the chosen filter, so a member should see whet did he searched for-->
                 Category&nbsp;
                 <strong th:text="${category} != null ? ${category.getName()} : 'ALL'">Category Title</strong>
                 &nbsp;Genre&nbsp;
