--- a/src/resources/templates/headerWithFilter.html
+++ b/src/resources/templates/headerWithFilter.html
@@ -24,7 +24,7 @@
                             <option value="0">ALL</option>
                             <option th:each="gen : ${genres}"
                                     th:value="${gen.getId()}"
-                                    th:text="${gen.getName()}"></option>
+                                    th:text="${gen.getType()}"></option>
                         </select>
                     </div>
                     <button type="selectCategory" class="btn btn-warning">Filter</button>
