--- a/src/resources/templates/logregpart.html
+++ b/src/resources/templates/logregpart.html
@@ -3,9 +3,9 @@
 <body>
 
 <div th:fragment="copy">
-    <input type="text" name="name" placeholder="login name"/>
+    <input th:required="required" type="text" name="name" placeholder="login name" />
     <br/>
-    <input type="password" name="password" placeholder="password"/>
+    <input th:required="required" type="password" name="password" placeholder="password" />
     <br/>
 
 </div>
