created base user profile page

--- a/src/resources/templates/book/login.html
+++ b/src/resources/templates/book/login.html
@@ -3,7 +3,7 @@
     <head th:replace="head :: copy"></head>
     <body>
 
-        <div th:replace="header :: copy"></div>
+        <div th:replace="header/header :: copy"></div>
         <div class="container">
             <a href="/">
                 <button type="button" class="btn btn-warning">Back to main page</button>
