--- a/src/resources/templates/book/soon.html
+++ b/src/resources/templates/book/soon.html
@@ -3,7 +3,7 @@
     <head th:replace="head :: copy"></head>
     <body>
 
-        <div th:replace="headerWithFilter :: copy"></div>
+        <div th:replace="header/headerWithFilter :: copy"></div>
         <div class="container">
             <h2 class="soon align-middle">Coming soon</h2>
 
