--- a/src/resources/templates/book/index.html
+++ b/src/resources/templates/book/index.html
@@ -3,7 +3,7 @@
     <head th:replace="head :: copy"></head>
     <body>
 
-        <div th:replace="headerWithFilter :: copy"></div>
+        <div th:replace="header/headerWithFilter :: copy"></div>
 
         <div class="container">
 
