--- a/src/resources/templates/header/header.html
+++ b/src/resources/templates/header/header.html
@@ -10,7 +10,9 @@
                             <img src="/img/logo.png" alt=""/>
                         </a>
                     </div>
+                    <div th:replace="header/login_block :: copy"></div>
                 </div>
+
             </div>
             <div class="jumbotron text-center">
                 <h2>
