--- a/src/resources/templates/header/headerWithFilter.html
+++ b/src/resources/templates/header/headerWithFilter.html
@@ -30,29 +30,11 @@
                     <button type="selectCategory" class="btn btn-warning">Filter</button>
                 </form>
             </div>
-            <ul class="nav navbar-nav">
-                <li class="active">
-                    <div th:if="${user}">
-                        <div class="btn-group" role="group" aria-label="Basic example">
-                            <button type="button" class="btn btn-outline-warning" th:text="'Hi ' + ${user}"></button>
-                            <a href="/logout">
-                                <button type="button" class="btn btn-outline-warning">Logout</button>
-                            </a>
-                        </div>
-                        <a href="/soon"><img src="/img/profile.png" alt=""/></a> <!--TODO profile page-->
-                    </div>
-                    <div th:unless="${user}">
-                        <div class="btn-group" role="group" aria-label="Basic example">
-                            <a href="/registration">
-                                <button type="register" class="btn btn-warning">Register</button>
-                            </a>
-                            <a href="/login">
-                                <button type="login" class="btn btn-warning">Login</button>
-                            </a>
-                        </div>
-                    </div>
-                </li>
-            </ul>
+
+
+            <div th:replace="header/login_block :: copy"></div>
+
+
         </div>
     </div>
     <div class="jumbotron text-center">
