--- a/src/resources/templates/profile/main_profile.html
+++ b/src/resources/templates/profile/main_profile.html
@@ -5,8 +5,12 @@
 
         <div th:replace="header/header :: copy"></div>
         <div class="container">
-            <h1>ERROR PAGE</h1>
-            <div th:text="${error}"></div>
+            User profile page
+
+            <div th:replace="profile/pending_table :: copy"></div>
+            <div th:replace="profile/rented_table :: copy"></div>
+            <div th:replace="profile/rent_history_table :: copy"></div>
+
 
 
             <div th:replace="footer :: copy"></div>
