--- a/src/resources/templates/header/login_block.html
+++ b/src/resources/templates/header/login_block.html
@@ -11,7 +11,7 @@
                     <button type="button" class="btn btn-outline-warning">Logout</button>
                 </a>
             </div>
-            <a href="/soon"><img src="/img/profile.png" alt=""/></a> <!--TODO profile page-->
+            <a href="/profile"><img src="/img/profile.png" alt=""/></a> <!--TODO profile page-->
         </div>
         <div th:unless="${member}">
             <div class="btn-group" role="group" aria-label="Basic example">
