--- a/src/resources/templates/profile/pending_table.html
+++ b/src/resources/templates/profile/pending_table.html
@@ -10,17 +10,21 @@
         </div>
     </div>
 
-    <table>
-        <tr>
-            <th>Rent ID</th>
-            <th>Title</th>
-            <th>Copy ID</th>
-        </tr>
-        <tr th:each="rent,iterStat : ${rentList}">
-            <td th:text="${rent.getId()}"></td>
-            <td th:text="${rent.getCopy().getMedia().getTitle()}"></td>
-            <td th:text="${rent.getCopy().getId()}"></td>
-        </tr>
+    <table class="table">
+        <thead class="thead-dark">
+            <tr>
+                <th scope="col">Rent ID</th>
+                <th scope="col">Title</th>
+                <th scope="col">Copy ID</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr th:each="rent,iterStat : ${rentList}">
+                <td th:text="${rent.getId()}"></td>
+                <td th:text="${rent.getCopy().getMedia().getTitle()}"></td>
+                <td th:text="${rent.getCopy().getId()}"></td>
+            </tr>
+        </tbody>
     </table>
 
 </div>
