--- a/src/resources/templates/profile/rented_table.html
+++ b/src/resources/templates/profile/rented_table.html
@@ -5,35 +5,33 @@
 
 <div class="container" th:fragment="copy">
     <div class="breadcrumb">
-        <div class="breadcrumb-item">
+        <strong class="breadcrumb-item">
             Rented Table
-        </div>
+        </strong>
     </div>
 
 
-    <table>
+    <table class="table">
+        <thead class="thead-primary">
         <tr>
-            <th>
-                Rent ID
-            </th>
-            <th>
-                Title
-            </th>
-            <th>
-                Copy
-            </th>
+            <th scope="col">Rent ID</th>
+            <th scope="col">Title</th>
+            <th scope="col">Author</th>
+            <th scope="col">Copy ID</th>
+            <th scope="col">Rent started</th>
+            <th scope="col">Rent ended</th>
         </tr>
-        <tr th:each="rent,iterStat : ${rentlist}">
-            <td th:text="${rent.rentid}">
-
-            </td>
-            <td th:text="${rent.title}">
-
-            </td>
-            <td th:text="${rent.copyid}">
-
-            </td>
+        </thead>
+        <tbody>
+        <tr th:each="rent,iterStat : ${rentedList}">
+            <td th:text="${rent.getId()}"></td>
+            <td th:text="${rent.getCopy().getMedia().getTitle()}"></td>
+            <td th:text="${rent.getCopy().getMedia().getAuthor().getName()}"></td>
+            <td th:text="${rent.getCopy().getId()}"></td>
+            <td th:text="${rent.getDateStart()}"></td>
+            <td th:text="${rent.getDateEnd()}"></td>
         </tr>
+        </tbody>
     </table>
 
 </div>
