refactor whole project (history is renamed to returned)

--- a/src/resources/templates/profile/rented_table.html
+++ b/src/resources/templates/profile/rented_table.html
@@ -6,7 +6,7 @@
 <div class="container" th:fragment="copy">
     <div class="breadcrumb">
         <strong class="breadcrumb-item">
-            Rented Table
+            Rented medias
         </strong>
     </div>
 
