--- a/src/resources/templates/profile/main_profile.html
+++ b/src/resources/templates/profile/main_profile.html
@@ -9,7 +9,7 @@
 
             <div th:replace="profile/pending_table :: copy"></div>
             <div th:replace="profile/rented_table :: copy"></div>
-            <div th:replace="profile/rent_history_table :: copy"></div>
+            <div th:replace="profile/returned_table :: copy"></div>
 
 
 
