--- a/src/resources/templates/profile/pending_table.html
+++ b/src/resources/templates/profile/pending_table.html
@@ -6,7 +6,7 @@
 <div class="container" th:fragment="copy">
     <div class="breadcrumb">
         <strong class="breadcrumb-item">
-            Pending Table
+            Pending medias
         </strong>
     </div>
 
