--- a/src/resources/templates/profile/returned_table.html
+++ b/src/resources/templates/profile/returned_table.html
@@ -6,7 +6,7 @@
 <div class="container" th:fragment="copy">
     <div class="breadcrumb">
         <strong class="breadcrumb-item">
-            Rent history Table
+            Returned medias
         </strong>
     </div>
 
@@ -24,7 +24,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:each="rent,iterStat : ${historyList}">
+        <tr th:each="rent,iterStat : ${returnedList}">
             <td th:text="${rent.getId()}"></td>
             <td th:text="${rent.getCopy().getMedia().getTitle()}"></td>
             <td th:text="${rent.getCopy().getMedia().getAuthor().getName()}"></td>
