--- a/src/resources/templates/book/registration.html
+++ b/src/resources/templates/book/registration.html
@@ -6,12 +6,12 @@
         <div th:replace="header/header :: copy"></div>
         <div class="container">
             <a href="/">
-                <button type="button" class="btn btn-warning">Back to main page</button>
+                <button type="button" class="btn btn-primary">Back to main page</button>
             </a>
             <form method = "post" action = "/registration">
                 <div th:replace="logregpart :: copy"></div>
 
-                <button type="submit" class="btn btn-warning">Regist me!</button>
+                <button type="submit" class="btn btn-primary">Regist me!</button>
             </form>
 
 
