--- a/src/resources/templates/header/header.html
+++ b/src/resources/templates/header/header.html
@@ -17,7 +17,7 @@
             <div class="jumbotron text-center">
                 <h2>
                     CrashBooks
-                    <small class="text-muted">by Code Crashers</small>
+                    <small class="text-white">by Code Crashers</small>
                 </h2>
             </div>
         </div>
