--- a/src/resources/templates/book/index.html
+++ b/src/resources/templates/book/index.html
@@ -19,8 +19,8 @@
                     <div class="thumbnail">
                         <img class="group list-group-image" src="/img/book_thumb.png" th:src="${media.pictureUrl} != null ? '/img/' + ${media.pictureUrl} " alt="" />
                         <div class="caption">
-                            <h4 class="group inner list-group-item-heading" th:text="${media.getAuthor().getName()}">Author</h4>
-                            <h4 class="group inner list-group-item-heading" th:text="${media.getTitle()}">Product name</h4>
+                            <h5 class="group inner list-group-item-heading" th:text="${media.getAuthor().getName()}">Author</h5>
+                            <h5 class="group inner list-group-item-heading" th:text="${media.getTitle()}">Product name</h5>
                             <div class="row">
                                 <div class="col-6">
                                     <p class="lead" th:text="${media.getAvailableCopiesNumber()} + ' left'">X left</p>
@@ -28,11 +28,11 @@
                                 <div class="col-6">
                                     <form action="/rent" method="post">
                                         <input type="hidden" th:name="media_id" th:value="${media.id}" />
-                                        <div th:if="${media.isCopyAvailable()}">
-                                            <input class="btn btn-warning" type="submit" value ="Rent"/>
+                                        <div class="d-flex" th:if="${media.isCopyAvailable()}">
+                                            <input class="btn btn-primary ml-auto" type="submit" value ="Rent"/>
                                         </div>
-                                        <div th:unless="${media.isCopyAvailable()}">
-                                            <input class="btn btn-secondary" type="submit" value ="Rent" disabled=""/>
+                                        <div class="d-flex" th:unless="${media.isCopyAvailable()}">
+                                            <input class="btn btn-secondary ml-auto" type="submit" value ="Rent" disabled=""/>
                                         </div>
                                     </form>
                                 </div>
