--- a/src/resources/templates/book/login.html
+++ b/src/resources/templates/book/login.html
@@ -6,11 +6,11 @@
         <div th:replace="header/header :: copy"></div>
         <div class="container">
             <a href="/">
-                <button type="button" class="btn btn-warning">Back to main page</button>
+                <button type="button" class="btn btn-primary">Back to main page</button>
             </a>
             <form method = "post" action = "/login">
                 <div th:replace="logregpart :: copy"></div>
-                <button type="submit" class="btn btn-warning">Login</button>
+                <button type="submit" class="btn btn-primary">Login</button>
             </form>
 
 
