--- a/src/resources/templates/header/login_block.html
+++ b/src/resources/templates/header/login_block.html
@@ -6,9 +6,9 @@
     <li class="active">
         <div th:if="${member}">
             <div class="btn-group" role="group" aria-label="Basic example">
-                <button type="button" class="btn btn-outline-warning" th:text="'Hi ' + ${member}"></button>
+                <button type="button" class="btn btn-outline-primary" th:text="'Hi ' + ${member}"></button>
                 <a href="/logout">
-                    <button type="button" class="btn btn-outline-warning">Logout</button>
+                    <button type="button" class="btn btn-outline-primary">Logout</button>
                 </a>
             </div>
             <a href="/profile"><img src="/img/profile.png" alt=""/></a> <!--TODO profile page-->
@@ -16,10 +16,10 @@
         <div th:unless="${member}">
             <div class="btn-group" role="group" aria-label="Basic example">
                 <a href="/registration">
-                    <button type="register" class="btn btn-warning">Register</button>
+                    <button type="register" class="btn btn-primary">Register</button>
                 </a>
                 <a href="/login">
-                    <button type="login" class="btn btn-warning">Login</button>
+                    <button type="login" class="btn btn-primary">Login</button>
                 </a>
             </div>
         </div>
