membership page created

--- a/src/resources/templates/profile/main_profile.html
+++ b/src/resources/templates/profile/main_profile.html
@@ -4,6 +4,7 @@
     <body>
 
         <div th:replace="header/header :: copy"></div>
+        <div th:replace="header/edit_profile :: copy"></div>
         <div class="container">
             <strong th:text="${member} + ' your rent statuses'"></strong>
 
