changed profile buttons color

--- a/src/resources/templates/header/edit_profile.html
+++ b/src/resources/templates/header/edit_profile.html
@@ -5,17 +5,17 @@
 <div th:fragment="copy">
     <span>
         <a href="/edit/username">
-            <button class = "btn btn-warning">Edit User Name</button>
+            <button class = "btn btn-primary">Edit User Name</button>
         </a>
     </span>
     <span>
         <a href="/edit/password">
-            <button class = "btn btn-warning">Edit User Password</button>
+            <button class = "btn btn-primary">Edit User Password</button>
         </a>
     </span>
     <span>
         <a href="/membership">
-            <button class = "btn btn-warning">Buy New Membership</button>
+            <button class = "btn btn-primary">Buy New Membership</button>
         </a>
     </span>
 </div>
