Bootstrap fix: container in container.

--- a/src/resources/templates/profile/returned_table.html
+++ b/src/resources/templates/profile/returned_table.html
@@ -3,7 +3,7 @@
 <head th:replace="head :: copy"></head>
 <body>
 
-<div class="container" th:fragment="copy">
+<div th:fragment="copy">
     <div class="breadcrumb">
         <strong class="breadcrumb-item">
             Returned medias
