--- a/src/resources/templates/profile/main_profile.html
+++ b/src/resources/templates/profile/main_profile.html
@@ -5,7 +5,7 @@
 
         <div th:replace="header/header :: copy"></div>
         <div class="container">
-            <strong th:text="${member} + ' your rent statuses'"></strong>
+            <strong th:text="${memberName} + ' your rent statuses'"></strong>
 
             <div th:replace="profile/pending_table :: copy"></div>
             <div th:replace="profile/rented_table :: copy"></div>
