--- a/src/resources/templates/profile/membership.html
+++ b/src/resources/templates/profile/membership.html
@@ -42,7 +42,7 @@
             </div>
         </div>
     </div>
-    </div>>
+    </div>
     <div th:replace="footer :: copy"></div>
 </body>
 </html>
